# Chimpanzee_MetalMonkeys

./: .gitignore  README.md  requirements.txt  schema_ROS.md  schema_behaviorTree.md  schema_blackboard.md  test_data_20251211_083012.csv
src/hunter_bringup/: CMakeLists.txt  README.md  package.xml
src/hunter_bringup/config/: params.yaml
src/hunter_bringup/launch/: bringup.launch.py
src/hunter_control/: README.md  package.xml  schema.md  setup.cfg  setup.py
src/hunter_control/hunter_control/: ball_teleop.py  behavior_tree_node.py  behaviors_data.py  bt_main.py
src/hunter_control/hunter_control/analysis/: metrics_logger.py
src/hunter_control/hunter_control/behaviors/: actions.py  behaviors_data.py  conditions.py  topicsToBB.py  tree_builder.py
src/hunter_description/: CMakeLists.txt  README.md  package.xml  schema_ROS.md  schema_blackboard.md
src/hunter_description/config/: bridge.yaml
src/hunter_description/launch/: hunter_sim.launch.py
src/hunter_description/urdf/: rc_ball.sdf  red_ball.sdf  robot.urdf.xacro
src/hunter_description/worlds/: hexagon_world.sdf
src/hunter_perception/: README.md  package.xml  setup.cfg  setup.py
src/hunter_perception/hunter_perception/: __init__.py  kalman_filter.py  vision_node.py  yolo_detector.py
src/hunter_telemetry/: README.md  package.xml  setup.cfg  setup.py
src/hunter_telemetry/hunter_telemetry/: __init__.py  telemetry_node.py
static/: schema_blackboard.md
web_dashboard/: dashboard_server.py
web_dashboard/static/: script.js  style.css
web_dashboard/templates/: index.html
(+8 files in other folders)
